# order-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  constants.py  docker-compose-dev.yml  docker-compose.yml  main.py  manage.py  pyproject.toml
.github/workflows/: codeql.yml  dependabot.yml  lint.yml  security.yml  types.yml
api/: __init__.py  utils.py
api/v1/: __init__.py  auth.py  google.py  orders.py  profile.py  roles.py  users.py  verify.py
constants/: __init__.py  order.py
core/: logger.py  settings.py  tracer.py
db/: postgres.py  redis_db.py
middleware/: __init__.py  exceptions.py  request_id.py
migrations/: env.py  script.py.mako
migrations/versions/: 7e2a81bb3b30_init.py  a35e185cc1ac_init.py  ae85adbefd44_change_index.py  b1836c9f4601_init.py  b5d82de57a0c_init.py  c6283b8448fd_add_coordinates.py  d758c639905c_init.py  split_orders_table.py
models/: __init__.py  history.py  mixins.py  order.py  role.py  user.py
schemas/: __init__.py  base.py  checked_entities.py  google.py  history.py  order.py  roles.py  social.py  token.py  user.py
security/: __init__.py  auth.py  rate_limit.py
services/: order_service.py  rules.py  utils.py
