[project]
name = "order-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Bazhenov",email = "bazhenov.in@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "redis (>=6.2.0,<7.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "sqlalchemy[postgres] (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "async-fastapi-jwt-auth (>=0.6.6,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-api-python-client (>=2.174.0,<3.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.55b1,<0.56)",
    "opentelemetry-instrumentation-sqlalchemy (>=0.55b1,<0.56)",
    "opentelemetry-instrumentation-redis (>=0.55b1,<0.56)",
    "opentelemetry-instrumentation-requests (>=0.55b1,<0.56)",
    "opentelemetry-exporter-jaeger (>=1.21.0,<2.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pydantic-extra-types (>=2.10.5,<3.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "deprecated (>=1.2.18,<2.0.0)"
]
package-mode = false


[tool.poetry.group.linters.dependencies]
flake8-pyproject = "^1.2.3"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.tests.dependencies]
orjson = "^3.10.18"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"
pytest-lazy-fixture = "^0.6.3"


[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
line_length = 120
indent = "    "
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
lines_after_imports = 2


[tool.flake8]
max-line-length = 120
extend-ignore = [
    "W503",
    "E402",
    "E731",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
